<resources>
    <string name="app_name">Guitar Speed Trainer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigetion_icon">navigetion_icon</string>
    <string name="title_activity_setting">تنظیمات</string>
    <!--<string name="StartStopTotalTime">انتخاب با شروع، پایان، زمان کل</string>-->
    <!--<string name="StartStopChangeTime">انتخاب اب شروع، پایان، زمان تغییر</string>-->
    <!--<string name="StartStopBpmCount">انتخاب با شروع، پایان، تعداد ضربه در هر BPM</string>-->
    <string name="StartStopTotalTime">حالت ۱</string>
    <string name="StartStopChangeTime">حالت ۲</string>
    <string name="StartStopBpmCount">حالت ۳</string>
    <string name="TvChangeTime">5</string>
    <string name="change_time">change_time</string>
    <string name="to_bpm">to_bpm</string>
    <string name="from_bpm">from_bpm</string>
    <string name="TvFromBpm">30</string>
    <string name="TvToBpm">300</string>
    <string name="Save">ذخیره</string>
    <string name="AppbarTitle">سریع نوازی گیتار</string>
    <string name="SpeedSetting">تنظیمات سرعت</string>
    <string name="FromBpm"> از تمیو (BPM) </string>
    <string name="ToBpm"> تا تمپو (BPM) </string>
    <string name="ChangeTime"> طول هر BPM بر حسب ثانیه </string>
    <string name="BeepSound">تنظیمات صدا</string>
    <string name="TotalTime">زمان کل</string>
    <string name="title_activity_main">سریع نوازی گیتار</string>
    <string name="title_activity_mainpage">صفحه نخست</string>
    <string name="title_activity_about">درباره نرم افزار</string>
    <string name="title_activity_contactus">تماس با ما</string>
    <string name="title_activity_similarapp">برنامه های مشابه</string>
    <!--<string name="contactus">برای تماس با مدیر برنامه می‌توانید با آدرس ایمیل <a href="mailto:tavousi.ali@gmail.com" target="_top">tavousi.ali@gmail.com</a> و یا تلگرام <a href="https://telegram.me/tavousiali" target="_top">https://telegram.me/tavousiali</a> تماس بگیرید.</string>-->
    <string name="contactus">برای تماس با مدیر برنامه از دو طریق زیر اقدام کنید.</string>
    <string name="email_address">tavousi.ali@gmail.com</string>
    <string name="email">ایمیل:</string>
    <string name="telegram">تلگرام:</string>
    <string name="telegram_address">https://telegram.me/tavousiali</string>
    <string name="dialog_title">خطا</string>
    <string name="dialog_message">برای نمایش محصولات مشابه، اتصال اینترنتی خود را برقرار نمایید.</string>
</resources>
