<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainPage"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_activity_mainpage"/>
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/title_activity_setting"/>
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/title_activity_about"/>
        <item
            android:id="@+id/contactus"
            android:icon="@drawable/ic_menu_contactus"
            android:title="@string/title_activity_contactus"/>
    </group>

</menu>
