<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.atavoosi.guitarspeedtrainer.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <LinearLayout
        android:id="@+id/radioButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/bpmType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/StartStopBpmCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@null"
                android:drawableRight="@drawable/abc_btn_radio_material"
                android:text="@string/StartStopBpmCount" />

            <RadioButton
                android:id="@+id/StartStopChangeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@null"
                android:drawableRight="@drawable/abc_btn_radio_material"
                android:text="@string/StartStopChangeTime" />

            <RadioButton
                android:id="@+id/StartStopTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@null"
                android:drawableRight="@drawable/abc_btn_radio_material"
                android:text="@string/StartStopTotalTime" />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fromBpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioButtonGroup"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFromBpm"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/TvFromBpm" />

        <SeekBar
            android:id="@+id/sbFromBpm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/from_bpm"
            android:src="@drawable/from_bpm" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toBpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fromBpm"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <TextView
            android:id="@+id/tvToBpm"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/TvToBpm" />

        <SeekBar
            android:id="@+id/sbToBpm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/to_bpm"
            android:src="@drawable/to_bpm" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/changeTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toBpm"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <TextView
            android:id="@+id/tvChangeTime"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/TvChangeTime" />

        <SeekBar
            android:id="@+id/sbChangeTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/change_time"
            android:src="@drawable/change_time" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeTime"
        android:text="@string/Save" />
</RelativeLayout>
